--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello world
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>Euglena Page</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+   <div>
+        <p>Me and ミドリムシ</p>
+    </div>
+</body>
+</html>
