--- a/html_pages/problem.html
+++ b/html_pages/problem.html
@@ -12,7 +12,7 @@
         <p>あるのは問題だけです</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/facetter.html'">フェースィッター (Facetter)</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/pop_and_push.html'">末尾に出し入れ (Popback and Pushback)</p><br>
-		<p style="color: #35f; margin-bottom: 0px;" onclick="llocation.href='./../index.html'">戻る</p>
+		<p style="color: #35f; margin-bottom: 0px;" onclick="location.href='./../index.html'">戻る</p>
     </div>
 </body>
 </html>
