--- a/problem_pages/simple_rpg.html
+++ b/problem_pages/simple_rpg.html
@@ -61,6 +61,10 @@
 	       		<ul class="small_task">
 		        	<li>\(K=1\)</li>
         		</ul>
+	       		<h4>小課題 Smalonly</h4>
+	       		<ul class="small_task">
+		        	<li>\(1≦K≦10\)</li>
+        		</ul>
 	       		<h4>小課題 DAG</h4>
 	       		<ul class="small_task">
 		        	<li>マップのグラフには閉路がない。</li>
