--- a/problem_pages/simple_rpg.html
+++ b/problem_pages/simple_rpg.html
@@ -61,7 +61,7 @@
 	       		<ul class="small_task">
 		        	<li>\(K=1\)</li>
         		</ul>
-	       		<h4>小課題 Smalonly</h4>
+	       		<h4>小課題 Haganai</h4>
 	       		<ul class="small_task">
 		        	<li>\(1≦K≦10\)</li>
         		</ul>
