--- a/html_pages/problem.html
+++ b/html_pages/problem.html
@@ -12,7 +12,8 @@
         <p>あるのは問題だけです</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/facetter.html'">フェースィッター (Facetter)</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/pop_and_push.html'">末尾に出し入れ (Popback and Pushback)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/simple_rpg.html'">巡回経路 (Simple RPG)</p><br>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/simple_rpg.html'">巡回経路 (Simple RPG)</p>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/5_5_everywhere.html'">合成して合成数 (Five Five Everywhere (Judge ver.))</p><br>
 		<p style="color: #35f; margin-bottom: 0px;" onclick="location.href='./../index.html'">戻る</p>
     </div>
 </body>
