--- a/problem_pages/5_5_everywhere.html
+++ b/problem_pages/5_5_everywhere.html
@@ -12,7 +12,7 @@
         <div class="problem">
         	<h3 class="problem_title">問題文</h3>
 		        <p>要素数\(N\)の正整数列\(a\)が与えられます。</p>
-		        <p>この数列の中から5個の整数を選んだときに和が合成数になる組み合わせの通り数を求めなさい。</p>
+		        <p>この数列の中から5個の整数を選んだときに和が合成数になる組み合わせは何通りかを求めなさい。</p>
 	       	<h3 class="problem_title">入力</h3>
 		        <p>\(N\)</p>
 		        <p>\(a_1\) \(a_2\) \(...\) \(a_N\) </p>
