--- a/problem_pages/5_5_everywhere.html
+++ b/problem_pages/5_5_everywhere.html
@@ -51,6 +51,7 @@
 		        	<li>追加の制約はない。</li>
         		</ul>
 	    </div>
+        <p style="color: #999;">作成日 : 2018/5/6</p>
 		<p class="back_button" onclick="location.href='./../html_pages/problem.html'"><u>戻る</u></p>
     </div>
 </body>
