--- a/problem_pages/pop_and_push.html
+++ b/problem_pages/pop_and_push.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 </head>
 <body style="background-color: #a9fca1;">
-   <div style="height: 2400px;" class="problem_div">
+   <div class="problem_div">
         <h2 class="title">語尾に出し入れ (Popback and Pushback)</h2>
         <div class="problem">
         	<h3 class="problem_title">問題文</h3>
@@ -62,6 +62,7 @@
 		        	<li>追加の制約はない。</li>
         		</ul>
 	    </div>
+        <p style="color: #999;">作成日 : 2018/5/4</p>
 		<p class="back_button" onclick="location.href='./../html_pages/problem.html'"><u>戻る</u></p>
     </div>
 </body>
