--- a/html_pages/problem.html
+++ b/html_pages/problem.html
@@ -6,14 +6,16 @@
     <link rel="stylesheet" href="./../style.css">
 </head>
 <body style="background-color: #beb;">
-   <div style="height: 500px;" class="normal_div">
+   <div style="height: 700px;" class="normal_div">
         <h2 class="title">自作問題集</h2>
         <p>オンラインジャッジはありません</p>
         <p>あるのは問題だけです</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/facetter.html'">フェースィッター (Facetter)</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/pop_and_push.html'">末尾に出し入れ (Popback and Pushback)</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/simple_rpg.html'">巡回経路 (Simple RPG)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/5_5_everywhere.html'">合成して合成数 (Five Five Everywhere (Judge ver.))</p><br>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/5_5_everywhere.html'">合成して合成数 (Five Five Everywhere (Judge ver.))</p>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/a_little_girl.html'">幼女 (a Little Girl)</p>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/hardle.html'">足を怪我したアスラット (Hardle)</p><br>
 		<p style="color: #35f; margin-bottom: 0px;" onclick="location.href='./../index.html'">戻る</p>
     </div>
 </body>
