--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <div style="height: 500px;" class="normal_div">
         <p class="title">Euglena-page</p>
         <p style="color: #44f;" onclick="location.href='./html_pages/problem.html'"><u>自作問題</u></p>
+        <p style="color: #44f;" onclick="location.href='./html_pages/MathJax.html'"><u>MathJax</u></p>
     </div>
 </body>
 </html>
