--- a/html_pages/problem.html
+++ b/html_pages/problem.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./../style.css">
 </head>
 <body style="background-color: #beb;">
-   <div style="height: 700px;" class="normal_div">
+   <div style="height: 800px;" class="normal_div">
         <h2 class="title">自作問題集</h2>
         <p>オンラインジャッジはありません</p>
         <p>あるのは問題だけです</p>
@@ -15,7 +15,10 @@
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/simple_rpg.html'">巡回経路 (Simple RPG)</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/5_5_everywhere.html'">合成して合成数 (Five Five Everywhere (Judge ver.))</p>
         <p style="color: #a5f;" onclick="location.href='./../problem_pages/a_little_girl.html'">幼女 (a Little Girl)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/hardle.html'">足を怪我したアスラット (Hardle)</p><br>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/hardle.html'">足を怪我したアスラット (Hardle)</p>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/replace_and_search.html'">パターンマッチング (Replace and Search)</p>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/knapsack_on_graph.html'">ナップサックと最短経路 (Knapsack on Shortest Path)</p>
+        <p style="color: #a5f;" onclick="location.href='./../problem_pages/move_on_complete_graph.html'">完全グラフの上を往く (Move on Complete Graph)</p>
 		<p style="color: #35f; margin-bottom: 0px;" onclick="location.href='./../index.html'">戻る</p>
     </div>
 </body>
