--- a/html_pages/MathJax.html
+++ b/html_pages/MathJax.html
@@ -34,7 +34,7 @@
         <span>font: <input id="font_family" style="background-color: #9e9; font-size: 20px; border: solid #afa; width: 200px; height: 30px; font-family: sans-serif;" value="sans-serif"></span><br><br>
         <button style="width: 100px; height: 50px; font-size: 30px;" onclick="output()" id="output_button" class="button">出力</button>
         <pre style="font-size: 20px; font-family: sans-serif;" id="output_pre"></pre>
-        <p style="margin-right: 0px;" onclick="location.href='./../index.html'" class="back_button">戻る</p>
+        <a style="margin-right: 0px;" href="./../index.html" class="back_button">戻る</a>
     </div>
     <script>
         var buttons = $(".button");
