--- a/html_pages/problem.html
+++ b/html_pages/problem.html
@@ -10,16 +10,16 @@
         <h2 class="title">自作問題集</h2>
         <p>オンラインジャッジはありません</p>
         <p>あるのは問題だけです</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/facetter.html'">フェースィッター (Facetter)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/pop_and_push.html'">末尾に出し入れ (Popback and Pushback)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/simple_rpg.html'">巡回経路 (Simple RPG)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/5_5_everywhere.html'">合成して合成数 (Five Five Everywhere (Judge ver.))</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/a_little_girl.html'">幼女 (a Little Girl)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/hardle.html'">足を怪我したアスラット (Hardle)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/replace_and_search.html'">パターンマッチング (Replace and Search)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/knapsack_on_graph.html'">ナップサックと最短経路 (Knapsack on Shortest Path)</p>
-        <p style="color: #a5f;" onclick="location.href='./../problem_pages/move_on_complete_graph.html'">完全グラフの上を往く (Move on Complete Graph)</p>
-		<p style="color: #35f; margin-bottom: 0px;" onclick="location.href='./../index.html'">戻る</p>
+        <a style="color: #a5f;" href="./../problem_pages/facetter.html">フェースィッター (Facetter)</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/pop_and_push.html">末尾に出し入れ (Popback and Pushback)</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/simple_rpg.html">巡回経路 (Simple RPG)</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/5_5_everywhere.html">合成して合成数 (Five Five Everywhere (Judge ver.))</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/a_little_girl.html">幼女 (a Little Girl)</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/hardle.html">足を怪我したアスラット (Hardle)</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/replace_and_search.html">パターンマッチング (Replace and Search)</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/knapsack_on_graph.html">ナップサックと最短経路 (Knapsack on Shortest Path)</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/move_on_complete_graph.html">完全グラフの上を往く (Move on Complete Graph)</a><br>
+		<a style="color: #35f; margin-bottom: 0px;" href="./../index.html">戻る</a>
     </div>
 </body>
 </html>
