--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body style="background-color: #bfb;">
    <div style="height: 500px;" class="normal_div">
         <p class="title">Euglena-page</p>
-        <p style="color: #44f;" onclick="location.href='./html_pages/problem.html'"><u>自作問題</u></p>
-        <p style="color: #44f;" onclick="location.href='./html_pages/MathJax.html'"><u>MathJax</u></p>
+        <a style="color: #44f;" href="./html_pages/problem.html"><u>自作問題</u></a><br><br>
+        <a style="color: #44f;" href="./html_pages/MathJax.html"><u>MathJax</u></a>
     </div>
 </body>
 </html>
