--- a/problem_pages/a_little_girl.html
+++ b/problem_pages/a_little_girl.html
@@ -64,7 +64,7 @@
         		</ul>
 	    </div>
         <p style="color: #999;">作成日 : 2018/5/13</p>
-		<p class="back_button" onclick="location.href='./../html_pages/problem.html'"><u>戻る</u></p>
+		<a class="back_button" href="./../html_pages/problem.html"><u>戻る</u></a>
     </div>
 </body>
 </html>
