--- a/problem_pages/facetter.html
+++ b/problem_pages/facetter.html
@@ -53,7 +53,7 @@
         		</ul>
 	    </div>
         <p style="color: #999;">作成日 : 2018/5/4</p>
-		<p class="back_button" onclick="location.href='./../html_pages/problem.html'"><u>戻る</u></p>
+		<a class="back_button" href="./../html_pages/problem.html"><u>戻る</u></a>
     </div>
 </body>
 </html>
