--- a/problem_pages/replace_and_search.html
+++ b/problem_pages/replace_and_search.html
@@ -43,7 +43,7 @@
         		</ul>
 	    </div>
         <p style="color: #999;">作成日 : 2018/7/19</p>
-		<p class="back_button" onclick="location.href='./../html_pages/problem.html'"><u>戻る</u></p>
+		<a class="back_button" href="./../html_pages/problem.html"><u>戻る</u></a>
     </div>
 </body>
 </html>
