自作問題の修正、simple HTMLの追加

--- a/html_pages/MathJax.html
+++ b/html_pages/MathJax.html
@@ -27,14 +27,14 @@
         <p>入力した文字列を表示します。MathJaxが使える表記があったらそこを変換して表示します。</p>
         <p style="color: #555">記入例) 実数 \$a,b\$ について、\$\$a,b>0\Rightarrow\sqrt{a}+\sqrt{b}>\sqrt{a+b}\$\$ が成り立つ。</p>
         <textarea style="background-color: #9e9; font-size: 20px; border: solid #afa; font-family: sans-serif;" rows="8" cols="50" id="content"></textarea>
-        <button style="width: 80px; height: 40px; font-size: 20px;" onclick="save()" id="output_button" class="button">保存</button><br><br>
+        <button style="width: 80px; height: 40px; font-size: 20px;" onclick="save()" class="button">保存</button><br><br>
         <span>font size: <input id="font_size" style="background-color: #9e9; font-size: 20px; border: solid #afa; width: 100px; height: 30px; font-family: sans-serif;" value="20">px</span><br><br>
         <span>background color: <input id="background_color" style="background-color: #9e9; font-size: 20px; border: solid #afa; width: 100px; height: 30px; font-family: sans-serif;" value="#7c8"></span><br><br>
         <span>text color: <input id="text_color" style="background-color: #9e9; font-size: 20px; border: solid #afa; width: 100px; height: 30px; font-family: sans-serif;" value="black"></span><br><br>
         <span>font: <input id="font_family" style="background-color: #bcb; font-size: 20px; border: solid #9a9; color: #333; width: 200px; height: 30px; font-family: sans-serif;" value="sans-serif"></span>
         <select id="font_family_selector" style="background-color: #9e9; font-size: 20px; border: solid #afa; width: 300px; font-family: sans-serif;" size="3"></select>
         <span style="color: gray; font-size: 20px;">※環境によっては使えないフォントがあります</span><br><br>
-        <button style="width: 100px; height: 50px; font-size: 30px;" onclick="output()" id="output_button" class="button">出力</button>
+        <button style="width: 100px; height: 50px; font-size: 30px;" onclick="output()" class="button">出力</button>
         <pre style="font-size: 20px; font-family: sans-serif;" id="output_pre"></pre>
         <a style="margin-right: 0px;" href="./../index.html" class="back_button">戻る</a>
     </div>
