--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
    <div style="height: 500px;" class="normal_div">
         <p class="title">Euglena-page</p>
         <a style="color: #44f;" href="./html_pages/problem.html"><u>自作問題</u></a><br><br>
-        <a style="color: #44f;" href="./html_pages/MathJax.html"><u>MathJax</u></a>
+        <a style="color: #44f;" href="./html_pages/MathJax.html"><u>MathJax</u></a><br><br>
+        <a style="color: #44f;" href="./html_pages/simple_HTML.html"><u>simple HTML</u></a>
     </div>
 </body>
 </html>
