--- a/problem_pages/knapsack_on_graph.html
+++ b/problem_pages/knapsack_on_graph.html
@@ -17,7 +17,7 @@
 		        <p>また、あなたはナップサックを持っています。</p>
 		        <p>ある頂点にきた時、その頂点に置いてある物をナップサックに入れることができます。入れなくても構いません。</p>
 		        <p>ナップサックに入れる物の個数に制限はありませんが、ナップサックに入っている物の重さの総和は常に \(W\) 以下でなければいけません。</p>
-		        <p>頂点 \(N\) まで行に辿り着いた時点でのナップサックに入っている物の価値の総和があなたのスコアになります。</p>
+		        <p>頂点 \(N\) に辿り着いた時点でのナップサックに入っている物の価値の総和があなたのスコアになります。</p>
 		        <p>スコアの最大値を求めてください。</p>
 	       	<h3 class="problem_title">入力</h3>
 		        <p>\(N\) \(M\) \(W\)</p>
