--- a/problem_pages/pop_and_push.html
+++ b/problem_pages/pop_and_push.html
@@ -11,14 +11,14 @@
         <h2 class="title">語尾に出し入れ (Popback and Pushback)</h2>
         <div class="problem">
         	<h3 class="problem_title">問題文</h3>
-		        <p>文字列\(X\)と文字列集合\(X'\)があります。</p>
-		        <p>初期状態では\(X=S\)であり、\(X'\)には文字列\(S\)のみが1個入っている状態です。</p>
+		        <p>文字列 \(X\) と文字列集合 \(X'\) があります。</p>
+		        <p>初期状態では \(X=S\)であり、 \(X'\) には文字列 \(S\) のみが1個入っている状態です。</p>
 		        <p>ここに、次の操作を\(N\)回します。</p>
-		        <p>・\(i\)回目の操作では\(X\)の語尾から\(a_i\)文字を削除し、\(X\)の語尾に文字列\(b_i\)を連結させ、\(X\)を\(X'\)に追加する</p>
-		        <p>なお、どの操作でもその操作を始めるタイミングでは\(X\)が\(a_i\)文字以上であることが保証されます。</p>
-		        <p>このとき、\(N\)回の操作を終えると、\(X'\)には\(N+1\)個の文字列が入っている状態になります。</p>
-		        <p>\(N\)回の操作の後に次の形のクエリが\(Q\)個与えられるので、それを順番に処理して下さい。</p>
-		        <p>・\(i\)個目のクエリでは、\(X'\)の中に入っている文字列の中で文字列\(T_i\)がprefixであるものの個数を答える。</p>
+		        <p>・ \(i\) 回目の操作では \(X\) の語尾から \(a_i\) 文字を削除し、 \(X\) の語尾に文字列 \(b_i\) を連結させ、 \(X\) を \(X'\) に追加する</p>
+		        <p>なお、どの操作でもその操作を始めるタイミングでは \(X\) が \(a_i\) 文字以上であることが保証されます。</p>
+		        <p>このとき、 \(N\) 回の操作を終えると、 \(X'\) には \(N+1\) 個の文字列が入っている状態になります。</p>
+		        <p> \(N\) 回の操作の後に次の形のクエリが \(Q\) 個与えられるので、それを順番に処理して下さい。</p>
+		        <p>・ \(i\) 個目のクエリでは、 \(X'\) の中に入っている文字列の中で文字列 \(T_i\) がprefixであるものの個数を答える。</p>
 	       	<h3 class="problem_title">入力</h3>
 		        <p>\(N\) \(S\)</p>
 		        <p>\(a_1\) \(b_1\)</p>
@@ -36,22 +36,21 @@
  			        <li>\(1≦N,Q≦3\times10^5\)</li><br>
  			        <li>\(0≦a_i≦3\times10^5\)</li><br>
 			        <li>\(1≦(|b_i|\) の和\()≦3\times10^5\)</li><br>
-			        <li>\(1≦|S_i|≦3\times10^5\)</li><br>
+			        <li>\(1≦|S|≦3\times10^5\)</li><br>
 			        <li>\(1≦(|T_i|\) の和\()≦3\times10^5\)</li><br>
         		</ul>
 	       	<h3 class="problem_title">小課題</h3>
 	       		<h4>小課題 Short</h4>
 	       		<ul class="small_task">
 		        	<li>\(1≦N,Q≦4\times10^3\)</li><br>
-		        	<li>\(1≦a_i,|b_i|,|T_i|,|S_i|≦4\times10^3\)</li><br>
- 		        	<li>\(X\)は常に\(4\times10^3\)文字を超えない</li>
+		        	<li>\(1≦a_i,|b_i|,|T_i|,|S|≦4\times10^3\)</li><br>
+ 		        	<li>\(X\) は常に \(4\times10^3\) 文字を超えない</li>
         		</ul>
 	       		<h4>小課題 Long</h4>
 	       		<ul class="small_task">
 		        	<li>\(1≦N,Q≦4\times10^3\)</li><br>
 		        	<li>\(1≦a_i,|b_i|,|T_i|≦4\times10^3\)</li><br>
- 		        	<li>\(1≦|S_i|≦3\times10^5\)</li><br>
- 		        	<li>\(X\)は常に\(296\) \(000\)文字を下回らない</li>
+ 		        	<li>\(X\) は常に \(296\) \(000\) 文字を下回らない</li>
         		</ul>
 	       		<h4>小課題 Non-Decreasing</h4>
 	       		<ul class="small_task">
