数学の問題を追加、simple HTMLの入力部の字体をCourierに変更

--- a/html_pages/problem.html
+++ b/html_pages/problem.html
@@ -19,7 +19,12 @@
         <a style="color: #a5f;" href="./../problem_pages/replace_and_search.html">パターンマッチング (Replace and Search)</a><br>
         <a style="color: #a5f;" href="./../problem_pages/knapsack_on_graph.html">ナップサックと最短経路 (Knapsack on Shortest Path)</a><br>
         <a style="color: #a5f;" href="./../problem_pages/move_on_complete_graph.html">完全グラフの上を往く (Move on Complete Graph)</a><br>
-		<a style="color: #35f; margin-bottom: 0px;" href="./../index.html">戻る</a>
+        <a style="color: #35f; margin-bottom: 0px;" href="./../index.html">戻る</a>
+    </div>
+    <br>
+    <div style="height: 400px;" class="normal_div">
+        <a style="color: #a5f; padding-top: 50px;" href="./../math_problem_pages/problem1.html">自作数学問題</a><br>
+        <a style="color: #35f; margin-bottom: 0px;" href="./../index.html">戻る</a>
     </div>
 </body>
 </html>
