--- a/html_pages/simple_HTML.html
+++ b/html_pages/simple_HTML.html
@@ -23,8 +23,8 @@
 <body style="background-color: #7c8;" id="background">
     <h2 style="font-family: 'Lucida Grande','TsukuARdGothic-Regular','ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN',sans-serif; text-align: center; font-size: 40px;">simple HTML</h2>
     <div style="position: absolute; left: 100px;">
-        <p style="font-family: 'Lucida Grande','TsukuARdGothic-Regular','ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN',sans-serif; text-align: center; font-size: 20px;">入力した文字列をHTMLのコードとして読み取り、表示します。雛形は要りません。MathJaxも使えます。</p>
-        <textarea style="background-color: #9e9; font-size: 20px; border: solid #afa; font-family: sans-serif;" rows="8" cols="50" id="___content"></textarea><br><br>
+        <p style="font-family: 'Lucida Grande','TsukuARdGothic-Regular','ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN',sans-serif; text-align: left; font-size: 20px;">入力した文字列をHTMLのコードとして読み取り、表示します。雛形は要りません。MathJaxも使えます。</p>
+        <textarea style="background-color: #9e9; font-size: 20px; border: solid #afa; font-family: 'Courier', sans-serif;" rows="8" cols="50" id="___content"></textarea><br><br>
         <button style="width: 100px; height: 50px; font-size: 30px;" onclick="output()" class="___button">出力</button>
         <button style="width: 80px; height: 40px; font-size: 20px;" onclick="save()" class="___button">保存</button>
         <div style="margin-top: 20px;" id="___output_div"></div>
