--- a/html_pages/MathJax.html
+++ b/html_pages/MathJax.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML" id="mathjax"></script>
 </head>
 <body style="background-color: #7c8;" id="background">
-    <h2 class="title">MathJax</h2>
+    <h2 style="padding-top: 0px;" class="title">MathJax</h2>
     <div style="position: absolute; left: 100px;" class="simple_div">
         <p>入力した文字列を表示します。MathJaxが使える表記があったらそこを変換して表示します。</p>
         <p style="color: #555">記入例) 実数 \$a,b\$ について、\$\$a,b>0\Rightarrow\sqrt{a}+\sqrt{b}>\sqrt{a+b}\$\$ が成り立つ。</p>
