問題追加で忘れ物をしたので

--- a/html_pages/problem.html
+++ b/html_pages/problem.html
@@ -19,6 +19,7 @@
         <a style="color: #a5f;" href="./../problem_pages/replace_and_search.html">パターンマッチング (Replace and Search)</a><br>
         <a style="color: #a5f;" href="./../problem_pages/knapsack_on_graph.html">ナップサックと最短経路 (Knapsack on Shortest Path)</a><br>
         <a style="color: #a5f;" href="./../problem_pages/move_on_complete_graph.html">完全グラフの上を往く (Move on Complete Graph)</a><br>
+        <a style="color: #a5f;" href="./../problem_pages/minimum_sum_2.html">Minimum Sum 2</a><br>
         <a style="color: #35f; margin-bottom: 0px;" href="./../index.html">戻る</a>
     </div>
     <br>
