--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body style="background-color: #bfb;">
-   <div style="height: 500px;" class="normal_div">
+   <div style="height: 550px;" class="normal_div">
         <p class="title">Euglena-page</p>
         <a style="color: #44f;" href="./html_pages/problem.html"><u>自作問題</u></a><br><br>
         <a style="color: #44f;" href="./html_pages/MathJax.html"><u>MathJax</u></a><br><br>
         <a style="color: #44f;" href="./html_pages/simple_HTML.html"><u>simple HTML</u></a><br><br>
         <a style="color: #44f;" href="./html_pages/scattering.html"><u>scattering</u></a><br><br>
-        <a style="color: #44f;" href="./html_pages/testcase_maker.html"><u>Testcase Maker</u></a>
+        <a style="color: #44f;" href="./html_pages/testcase_maker.html"><u>Testcase Maker</u></a><br><br>
+        <a style="color: #44f;" href="./html_pages/sparebeat.html"><u>Sparebeat譜面置き場</u></a>
     </div>
 </body>
 </html>
