Sparebeatページに Clav Dungeon の譜面を追加

--- a/html_pages/sparebeat.html
+++ b/html_pages/sparebeat.html
@@ -24,8 +24,14 @@
                 <td style="background-color: #fbb;">12</td>
                 <td style="color: #999;">2018/8/11</td>
             </tr> 
+            <tr>
+                <td><a style="color: #45d;" href="./../sparebeat_pages/ClavDungeon/ClavDungeon.html">Clav Dungeon</a></td>
+                <td style="background-color: #bfb;">-</td>
+                <td style="background-color: #ffb;">-</td>
+                <td style="background-color: #fbb;">14</td>
+                <td style="color: #999;">2019/3/14</td>
+            </tr> 
         </table>
-        <a style="margin-right: 10px; margin-top: 30px;" href="./../index.html" class="back_button">ホームページへ</a>
     </div>
 </body>
 </html>
