--- a/sparebeat_pages/repeat_16/repeat_16.html
+++ b/sparebeat_pages/repeat_16/repeat_16.html
@@ -9,10 +9,10 @@
 <body style="background-color: #cdf;" id="background">
     <div style="position: absolute; width: 100%; left: 0;" class="general_div">
         <p style="font-size: 30px;">同じリズムが16回繰り返されるだけの曲</p>
-        <p style="font-size: 30px;"><easy>6</easy> / <normal>11</normal> / <hard>12</hard></p><br>
+        <p style="font-size: 25px;"><easy>6</easy> / <normal>11</normal> / <hard>12</hard></p><br>
         <iframe id="sparebeat" width="960" height="640" src="http://sparebeat.suzukibakery.com/embed/" frameborder="0"></iframe>
         <script src="http://sparebeat.suzukibakery.com/embed/api.js"></script>
-        <script>Sparebeat.load("repeat_16.json", "repeat_16.mp3");</script><br><br>
+        <script>Sparebeat.load("repeat_16.json", "repeat_16.ogg");</script><br><br>
         <a style="color: #45d" href="./../../html_pages/sparebeat.html">戻る</a><br>
     </div>
 </body>
