自作問題のMathJax前後の空白などを調整

--- a/problem_pages/replace_and_search.html
+++ b/problem_pages/replace_and_search.html
@@ -11,7 +11,7 @@
         <h2 class="title">パターンマッチング (Replace and Search)</h2>
         <div class="problem">
         	<h3 class="problem_title">問題文</h3>
-		        <p>文字列 \(S\) , \(T\) , \(U\) が与えられます。</p>
+		        <p>文字列 \(S, T, U\) が与えられます。</p>
 		        <p>あなたは文字列 \(S\) の部分文字列で長さが \(T\) と同じであるものを1つ選び、 \(T\) に置き換える操作をちょうど1回行います。</p>
 		        <p>置き換えた後の文字列を \(S'\) としたとき、 \(S'\) の部分文字列のうち \(U\) に一致するものの個数の最大値を求めなさい。</p>
 		        <p>Note. ある文字列から<u>連続する</u>部分列を取った時、その文字列を元の文字列の部分文字列といいます。</p>
