sparebeatページのURL変更

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a style="color: #44f;" href="./html_pages/simple_HTML.html"><u>simple HTML</u></a><br><br>
         <a style="color: #44f;" href="./html_pages/scattering.html"><u>scattering</u></a><br><br>
         <a style="color: #44f;" href="./html_pages/testcase_maker.html"><u>Testcase Maker</u></a><br><br>
-        <a style="color: #44f;" href="http://eug1ena.hariko.com"><u>Sparebeat 譜面置き場</u></a> (外部サイトに飛びます)<br><br>
+        <a style="color: #44f;" href="https://eug1ena.github.io/sparebeat"><u>Sparebeat 譜面置き場</u></a> (外部サイトに飛びます)<br><br>
         <a style="color: #44f;" href="./html_pages/game_lobby.html"><u>Games</u></a>
     </div>
 </body>
