--- a/html_pages/game_lobby.html
+++ b/html_pages/game_lobby.html
@@ -24,9 +24,10 @@
 なぜかIEに対応しておらず、ゲームが動かなかったので出すことはできなかった。</pre></td>
             </tr> 
             <tr>
-                <td><a style="color: #45d; font-size: 25px;" href="./../games/- - - - - - - o/rhythm_circle.html">Rhythm Circle</a></td>
+                <td><a style="color: #45d; font-size: 25px;" href="./../games/Rhythm Circle (2019 ver.)/start.html">Rhythm Circle<br>(2019 ver.)</a></td>
                 <td><pre style="font-size: 20px; width: 300px; text-align: left;" class="Lucida">青いボールが水色のゾーンに来た時にスペースを押しましょう</pre></td>
-                <td><pre style="font-size: 20px; width: 500px; text-align: left;" class="Lucida">2018文化祭用に作ったがボツになったもの。</pre></td>
+                <td><pre style="font-size: 20px; width: 500px; text-align: left;" class="Lucida">2018文化祭用に作ったがボツになった<a style="display: inline; color: #45d;" href="./../games/- - - - - - - o/rhythm_circle.html">旧作</a>の完成版。<br>といってもスタート画面が付いた以外はあんまり変わっていないが。</pre></td>
+
             </tr> 
             <tr>
                 <td><a style="color: #45d; font-size: 25px;" href="./../games/- - - - - - - o/bouncing_balls.html">Bouncing Balls</a></td>
