--- a/games/Rhythm Circle (2019 ver.)/index.html
+++ b/games/Rhythm Circle (2019 ver.)/index.html
@@ -11,7 +11,8 @@
 </head>
 <body style="background-color: #bfb; margin: 0;">
     <canvas></canvas>
-    <div style="position: absolute; top: 0; width: 100%; height: 100%; background-color: #858687; display: none;" id="bounce_div">
+    <a href="start.html" style="position: absolute; top: 40px; left: 80px; font-size: 30px; color: black;">Back</a>
+    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #858687; display: none;" id="bounce_div">
         <p style="padding-top: 50px; font-size: 60px; color: white; display: none;" id="gameover_text">GAME OVER!</p>
         <p style="padding-top: 50px; font-size: 50px; color: white; display: none;" id="gameover_scoreboard">Score : </p>
         <p style="padding-top: 20px; font-size: 30px; color: #db4646; display: none;" id="gameover_just">JUST : -</p>
@@ -21,9 +22,16 @@
         <a href="start.html" style="position: absolute; right: calc(50% - 160px); font-size: 50px; color: white; display: none; bottom: 80px;" id="back_to_start">Back</a>
     </div>
     <script>
+        var main_font = "Verdana";
+
         var canvas = $("canvas");
         canvas.attr("width", window_width);
         canvas.attr("height", window_height);
+
+        $(window).resize(function(){
+            window_width = parseInt($(window).width());
+            window_height = parseInt($(window).height());
+        });
 
         var c = canvas[0].getContext("2d");
 
@@ -70,8 +78,8 @@
 
         var circle_x = 50, circle_y = 50;
         //var circle_x = rand2(100 - to_percent_w(500)) + to_percent_w(250), circle_y = rand2(100 - to_percent_h(500)) + to_percent_h(250);
-        console.log(circle_x);
-        console.log(circle_y);
+        // console.log(circle_x);
+        // console.log(circle_y);
 
         function redraw(){
             c.clearRect(0, 0, canvas[0].width, canvas[0].height);
@@ -128,7 +136,7 @@
 
             c.strokeStyle = center_text_color + to_hex(Math.floor(text_alpha * 255));
             c.fillStyle = center_text_color + to_hex(Math.floor(text_alpha * 255));
-            c.font = center_text_size + "px Lucida Grande";
+            c.font = center_text_size + "px " + main_font;
             c.textAlign = "center";
             c.textBaseline = "middle";
             $("#hidden_font").css("font-size", center_text_size + "px");
@@ -142,7 +150,7 @@
 
             c.strokeStyle = "#d384eb";
             c.fillStyle = "#d384eb";
-            c.font = "45px Lucida Grande";
+            c.font = "45px " + main_font;
             c.textAlign = "right";
             c.beginPath();
             c.fillText("Score", 300, height_to_px(50) - 30);
@@ -153,7 +161,7 @@
 
             c.strokeStyle = "#162df1";
             c.fillStyle = "#162df1";
-            c.font = "45px Lucida Grande";
+            c.font = "45px " + main_font;
             c.textAlign = "left";
             c.beginPath();
             c.fillText("Balls", window_width - 300, height_to_px(50) - 30);
@@ -168,7 +176,7 @@
             c.arc(position_x_deg(trace.deg), position_y_deg(trace.deg), 8, to_radian(0), to_radian(360), true);
             c.fill();
             trace.alpha = Math.max(0, trace.alpha - 1 / trace_time);
-            console.log(trace.alpha);
+            // console.log(trace.alpha);
 
             if(ball_deg % 360 == 0){
                 time--;
@@ -199,14 +207,18 @@
                     speed = speed_array[time - 1];
                 }
                 is_balling = true;
-              //  circle_x = rand2(100 - to_percent_w(500)) + to_percent_w(250);
-              //  circle_y = rand2(100 - to_percent_h(500)) + to_percent_h(250);
+                // circle_x = rand2(100 - to_percent_w(500)) + to_percent_w(250);
+                // circle_y = rand2(100 - to_percent_h(500)) + to_percent_h(250);
             }
         }
 
         var just = 0, ok = 0;
 
         document.onkeydown = function(e){
+            if(e.keyCode == 27){
+                console.log("e");
+                window.open('about:blank','_self').close();
+            }
             if(e.keyCode != 32 || Math.abs(ball_deg % 360 - 180) > 90 || !is_balling){
                 return;
             }
